[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
validator = "0.14"
claim = "0.5"
unicode-segmentation = "1"
tracing-actix-web = "0.6"
secrecy = { version = "0.8", features = ["serde"]}
tracing-log = "0.1"
tracing = { version = "0.1", features = ["log"] }
log = "0.4"
env_logger = "0.9"
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
config = "0.13"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline"
]

[dev-dependencies]
once_cell = "1"
reqwest = "0.11"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
